# HandWritingAnalysis

./: .env  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/consulting/: Medgemma_from_ollama.py  medgemma_api_call.py  medgemma_direct.py  medgemma_image_analysis.py  medgemma_prompt.md  medgemma_prompt1.md  medgemma_user_streamlit.py  medgemma_user_streamlit_language.py  medgemma_user_voicve.py  patient_data.py  patient_medgemma_analysis.py  simple_prompt.md  test_cases.txt  testingmedgemma_output.py  transcript.txt
src/handwrittenanalysis/: AdvancedHandwrittenOCR.py  complete_handwriting_analysis.py  documentAI_Example.py  extracted_text.txt  handwriiten_microsoft_tcor.py  trocr_analysis.py
src/imageanalysis/: MODEL_DOWNLOAD_GUIDE.md  rashanalysis.py  train_skin_model.py
src/knowledgegraph/: aiknowledgegraph.py  aiknowledgegraph_llm.py  aiknowledgegraph_llm_centrality_measure.py  centrality_measures.json  triplets.json
src/knowledgegraph/knowledgegraph_2/: .gitignore  __init__.py  centrality_measures.json  config.py  create_knowledgegraph.py  triplets.json  triplets_prompts.py
src/knowledgegraph/knowledgegraph_2/gpt/: aiknowledgegraph_llm_centrality_measure_docling.py  centrality_measures.json  triplets.json
src/textanalysis/: SymptomExtraction.py
src/voiceanalysis/: PatientConversation.py  check_audio_device.py  check_audio_frombrowser.py  hello.py  local_voice_chat.py  patient_voice_analysis.py  patient_voice_recoredfile.py  test_mic.py  voice_cpu.py
src/voiceanalysis/patient_data/extractions/: conv_20251104_140950.json  conv_20251107_105313.json
src/voiceanalysis/patient_data/transcriptions/: conv_20251107_105313.txt
