[project]
name = "handwritingsanalysis"
version = "0.1.0"
description = "extracting the hadnwritten words"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.3.1",
    "pillow>=12.0.0",
    "svlearn-bootcamp>=0.1.7",
    "torch>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/handwrittenanalysis"]
